<resources>
    <string name="app_name">Lesson4</string>
    <string name="mainText">This texting game is one of the most\n spectacular ways to waste time.\n You and your friends choose a topic,\n such as celebrities or zoo animals.\n The first player will say a word in the\n chosen category. The second player\n then says a word or a name that\n begins with the last letter of the first\n player`s word.</string>
    <string name="todo">TODO</string>
    <string name="is_user_online">is user online</string>
    <string name="please_select">Please select:</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="ok">OK</string>
    <string name="profile_info">Profile info</string>
</resources>